force-app/main/default/objects/CB_Credit_Note_Allocations__c/fields/Allocated_At__c.field-meta.xml
<CustomField>
    <fullName>Allocated_At__c</fullName>
    <description>Date of allocation</description>
    <label>Allocated At</label>
    <type>DateTime</type>
</CustomField>