force-app/main/default/objects/CB_Credit_Note_Allocations__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>CB Credit Note</label>
    <referenceTo>CB_Credit_Note__c</referenceTo>
    <relationshipLabel>CB Credit Note Allocations</relationshipLabel>
    <relationshipName>CB_Credit_Note_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>