force-app/main/default/objects/CB_Credit_Note_Allocations__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allocated Invoice</description>
    <label>CB Invoice</label>
    <referenceTo>CB_Invoice__c</referenceTo>
    <relationshipLabel>CB Credit Note Allocations</relationshipLabel>
    <relationshipName>CB_Credit_Note_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>