force-app/main/default/objects/CB_Credit_Note_Allocations__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Allocated invoice date</description>
    <inlineHelpText>Allocated invoice date</inlineHelpText>
    <label>Invoice Date</label>
    <type>DateTime</type>
</CustomField>